infrastructure_tooling/ingress_configs/stirling-pdf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf-ingress
  namespace: stirling-pdf
  annotations:
    cert-manager.io/cluster-issuer: bmosan-cert
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
  - host: stirling-pdf.bmosan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling-pdf-stirling-pdf-chart
            port:
              number: 8080
  tls:
  - hosts:
    - stirling-pdf.bmosan.com
    secretName: stirling-pdf-bmosan-com
